@media for initiatives and header, couldn't fix the our mission overflow from the top

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-
-.row1{
-  overflow: hidden;
-
+body {
+  padding: 1px;
 }
 
+
+
+html {
+  font-size: 16px;
+}
 
 .row--testimonials {
   max-width: 114rem;
@@ -313,7 +316,7 @@
     opacity: 85%;
   }
 
-  @media(min-width:500px){
+  @media(min-width:480px){
     .row-bottom{
       height:auto;
       margin-top: auto;
@@ -449,15 +452,52 @@
   }
 }
 
-@media (max-width:991){
-  .section-header
-  {
-    height: 100%;
-    overflow-y: scroll;
+@media (max-width:768px){
+
+  .story__shape {
+    display: inline-block;
+    position: relative;
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    -webkit-clip-path: circle(50% at 50% 50%);
+    clip-path: circle(50% at 50% 50%);
+    /* transform: translateX(-3rem) skewX(12deg); */
+    transform: translateX(-3rem); 
   }
   
-  .section-initiatives {
-    margin-top: 200px;
-    height: 100%;
+  .story__text {
+
+    display: inline-block;
+
   }
+
+}
+
+@media (max-width:992px) {
+
+  html {
+    font-size: 12px;
+  }
+  .row1, .row2, .c-1 {
+    height: max-content !important;
+  }
+
+  .header-by-line {
+    display: none;
+  }
+
+  .our-mission, .pledge, .our-initiatives, .help-and-donate {
+    display: block;
+  }
+
+
+}
+
+
+@media (max-width:908px) {
+
+
+
+
 }
